<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/xlarge">
    <include layout="@layout/header"/>

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/actionbarsize"
        app:layout_constraintBottom_toTopOf="@id/footer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.38"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/actionbarsize"
            tools:layout_editor_absoluteY="-3dp"
            tools:itemCount="1"
            style="@style/cardview_style"
            tools:listitem="@layout/cardview_wemon" />

        <TextView
            android:id="@+id/category_women_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_women_category"
            style="@style/cardview_title"
             />
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8"
            android:layout_marginTop="@dimen/standard"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/actionbarsize"
            tools:itemCount="1"
            tools:listitem="@layout/cardview_men" />

        <TextView
            android:id="@+id/category_men_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standard"
            android:text="@string/text_men_cat"
            android:textColor="@color/color_category_text_body"
            android:textSize="@dimen/large"
            android:textStyle="bold"
            android:gravity="center"
            />
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            style="@style/cardview_style"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.38"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/actionbarsize"
            tools:itemCount="1"
            tools:layout_editor_absoluteY="-3dp"
            tools:listitem="@layout/cardview_accessories" />

        <TextView
            android:id="@+id/accessory_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standard"
            android:text="@string/text_accessories"
            android:textColor="@color/color_category_text_body"
            android:textSize="@dimen/large"
            android:textStyle="bold"
            android:gravity="center"
            />
    </LinearLayout>
    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        layout="@layout/footer"/>

</androidx.constraintlayout.widget.ConstraintLayout>